fix: fix z-index of the navbar and drawer

--- a/src/assets/styles/layout/_drawer.scss
+++ b/src/assets/styles/layout/_drawer.scss
@@ -7,6 +7,7 @@
   transform: translateX(0px);
   transition: 0.4s ease-in;
   background-color: $primary-background-color;
+  z-index: 1050;
   // z-index: 1060;
 }
 .drawer-wrapper::-webkit-scrollbar {
